<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="178dp"
        tools:layout_editor_absoluteY="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="215dp"
            tools:layout_editor_absoluteY="275dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            >

            <TextView
                android:id="@+id/tvCervezas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ceveza"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textSize="30dp"
                android:fontFamily="serif"
                android:textColor="@color/black"
                android:layout_marginVertical="10dp"
                />

            <TextView
                android:id="@+id/texVId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textAlignment="textStart"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="3dp"
                android:textSize="20dp"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/edId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/txtVNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textAlignment="textStart"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:layout_marginVertical="10dp"
                android:textSize="20dp"
                android:layout_marginLeft="3dp"
                tools:ignore="RtlCompat" />
            <EditText
                android:id="@+id/edNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtVMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/marca"
                android:textAlignment="textStart"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:layout_marginVertical="10dp"
                android:textSize="20dp"
                android:layout_marginLeft="3dp"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/edMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"/>
            <Button
                android:id="@+id/btNuevo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:onClick="Buscar"
                android:text="Nuevo"
                app:backgroundTint="#3F51B5" />
            <Button
                android:id="@+id/btBuscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:onClick="Buscar"
                android:text="Buscar"
                app:backgroundTint="#3F51B5" />
            <Button
                android:id="@+id/btGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/guardar"
                android:onClick="Guardar"
                app:backgroundTint="#3F51B5" />
            <Button
                android:id="@+id/btEliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/eliminar"
                android:onClick="Eliminar"
                app:backgroundTint="#3F51B5" />
            <Button
                android:id="@+id/btListar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/listar"
                android:onClick="Listar"
                app:backgroundTint="#3F51B5" />




        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>